--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "expo-mail-composer": "^8.0.0",
+    "expo-permissions": "~7.0.0",
     "expo-secure-store": "^8.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
