--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "expo-image-picker": "^8.0.1",
     "expo-mail-composer": "^8.0.0",
     "expo-permissions": "~7.0.0",
     "expo-secure-store": "^8.0.0",
